# hurry_chess

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
src/: game.cpp  game.hpp  main.cpp
src/core/: board.cpp  board.hpp  game_state.cpp  game_state.hpp  move_storage.cpp  move_storage.hpp  move_validator.cpp  move_validator.hpp  piece.cpp  piece.hpp  square.hpp
src/input/: input_handler.cpp  input_handler.hpp
src/rendering/: renderer.cpp  renderer.hpp  texture_manager.cpp  texture_manager.hpp
